apps/demo-app/base/rollout.yaml
---
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  labels:
    app: demo
  name: demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo
  strategy:
    blueGreen:
      activeService:
      previewService:
      autoPromotionEnabled: false 
  template:
    metadata:
      labels:
        app: demo
    spec:
      containers:
      - image: prachimittal2016/argocd-demo:1
        name: demo
        ports:
        - containerPort: 8080
---
