apps/demo-app/base/service-active.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: demo-active
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: demo
  type: NodePort
---
