apps/demo-app/base/service-preview.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: demo-preview
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: demo
  type: NodePort
---
